# bazel-kls-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  maven_install.json
src/main/kotlin/com/foo/helloworld/: Application.kt  BUILD.bazel  Foo.kt  HelloController.kt
src/main/proto/: BUILD.bazel  Foo.proto
src/main/resources/: BUILD.bazel  application.yml
src/test/kotlin/com/foo/helloworld/: BUILD.bazel  HelloTest.kt
