load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "lib",
    srcs = glob(["**/*.kt"]),
    resources = [
        "//src/main/resources",
    ],
    resource_strip_prefix = "src/main/resources",
    deps = [
        "//src/main/proto:foo_java_proto",
        "@maven//:jakarta_inject_jakarta_inject_api",
        "@maven//:io_micronaut_micronaut_http",
        "@maven//:io_micronaut_micronaut_inject_java",
        "@maven//:io_micronaut_micronaut_http_server_netty",
        "@maven//:io_micronaut_micronaut_runtime",
        "@maven//:ch_qos_logback_logback_classic",  
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:io_micronaut_micronaut_management",
        "@maven//:io_micronaut_micronaut_json_core",
        "@maven//:io_micronaut_micronaut_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:io_micronaut_micronaut_jackson_databind",
        "@maven//:com_google_protobuf_protobuf_java",

    ],
    plugins = [
        "//:micronaut_ksp_type_element_plugin",
        "//:micronaut_ksp_bean_processor_plugin",
    ],
)

java_binary(
    name = "app",
    main_class = "com.foo.helloworld.Application",
    runtime_deps = [
        ":lib",
    ],
    visibility = ["//visibility:public"],
)
